<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:weightSum="10"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:background="@drawable/clear_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">


            <ImageButton
                android:id="@+id/gender1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:src="@drawable/selector_toggle_button"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/player1"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:hint="@string/player1"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">

            <TextView
                android:id="@+id/level1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="30sp" />


            <Button
                android:id="@+id/down1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="-"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/result1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/up1"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:text="+"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:background="@drawable/clear_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">


            <ImageButton
                android:id="@+id/gender2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:src="@drawable/selector_toggle_button"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/player2"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:hint="@string/player2"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">

            <TextView
                android:id="@+id/level2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="30sp" />


            <Button
                android:id="@+id/down2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="-"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/result2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/up2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:text="+"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2"
        android:background="@drawable/clear_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">


            <ImageButton
                android:id="@+id/gender3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:src="@drawable/selector_toggle_button"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/player3"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:hint="@string/player3"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">

            <TextView
                android:id="@+id/level3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="30sp" />


            <Button
                android:id="@+id/down3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="-"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/result3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/up3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:text="+"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@drawable/clear_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">


            <ImageButton
                android:id="@+id/gender4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:src="@drawable/selector_toggle_button"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/player4"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:hint="@string/player4"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="#FFF1D0">

            <TextView
                android:id="@+id/level4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="30sp" />


            <Button
                android:id="@+id/down4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="-"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/result4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/up4"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:text="+"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="5dp"
        android:background="@drawable/clear_button"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">


            <ImageButton
                android:id="@+id/gender5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:src="@drawable/selector_toggle_button"
                android:textSize="50sp" />

            <EditText
                android:id="@+id/player5"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:hint="@string/player5"
                android:maxLines="1"
                android:inputType="textPersonName"
                android:textSize="25sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFF1D0">

            <TextView
                android:id="@+id/level5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level"
                android:textSize="30sp" />


            <Button
                android:id="@+id/down5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"
                android:background="#00000000"
                android:text="-"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/result5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="20dp"
                android:text="1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/up5"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#00000000"
                android:text="+"
                android:textSize="30sp" />


        </LinearLayout>
    </LinearLayout>


</LinearLayout>